# FM-Index

./: .gitignore  BitVector.cpp  BitVector.hpp  CMakeLists.txt  Makefile  README.md  RankSupport.hpp  SelectSupport.cpp  SelectSupport.hpp  bitvector
include/: BitVector.hpp  FMIndex.hpp  RankSupport.hpp  SelectSupport.hpp
src/: BitVector.cpp  FMIndex.cpp  FMIndex.hpp  RankSupport.cpp  SelectSupport.cpp  benchmark_fmindex.cpp  benchmark_rank.cpp  benchmark_select.cpp  bwoccurance.cpp  main.cpp
